force-app/main/default/objects/Tehsil__c/Tehsil__c.object-meta.xml
<CustomObject>
    <label>Tehsil</label>
    <nameField>
        <label>Tehsil Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tehsils</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>