force-app/main/default/objects/Tehsil__c/fields/Annual_Area_Potential__c.field-meta.xml
<CustomField>
    <fullName>Annual_Area_Potential__c</fullName>
    <formula>First_Quarter_Area_Potential__c + Second_Quarter_Area_Potential__c + Third_Quarter_Area_Potential__c + Forth_Quarter_Area_Potential__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Area Potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>