force-app/main/default/objects/Tehsil__c/fields/Annual_Target__c.field-meta.xml
<CustomField>
    <fullName>Annual_Target__c</fullName>
    <formula>First_Quarter_Target__c +  Forth_Quarter_Target__c +  Second_Quarter_Target__c +  Third_Quarter_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>