force-app/main/default/objects/Tehsil__c/fields/Curent_Month_Target__c.field-meta.xml
<CustomField>
    <fullName>Curent_Month_Target__c</fullName>
    <formula>IF( Month_Number__c = 1, January_Target__c ,
IF(Month_Number__c = 2, February_Target__c ,
IF(Month_Number__c = 3, March_Target__c,
IF(Month_Number__c = 4, April_Target__c,
IF(Month_Number__c = 5, May_Target__c,
IF(Month_Number__c = 6, June_Target__c,
IF(Month_Number__c = 7, July_Target__c,
IF(Month_Number__c = 8, August_Target__c,
IF(Month_Number__c = 9, September_Target__c,
IF(Month_Number__c = 10, October_Target__c,
IF(Month_Number__c = 11, November_Target__c,
IF(Month_Number__c = 12, December_Target__c, 0) ) ) ) ) ) ) ) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>