force-app/main/default/objects/Tehsil__c/fields/Dealer_Associate_Count__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Associate_Count__c</fullName>
    <label>Dealer Associate Count</label>
    <summaryForeignKey>Dealer_with_Tehsil__c.Tehsil_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>