force-app/main/default/objects/Tehsil__c/fields/Dealer_Target__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Target__c</fullName>
    <formula>Curent_Month_Target__c  /  Dealer_Associate_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>