force-app/main/default/objects/Tehsil__c/fields/First_Quarter_Area_Potential__c.field-meta.xml
<CustomField>
    <fullName>First_Quarter_Area_Potential__c</fullName>
    <formula>April_Area_Potential__c + May_Area_Potential__c + June_Area_Potential__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Quarter Area Potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>