force-app/main/default/objects/Tehsil__c/fields/First_Quarter_Target__c.field-meta.xml
<CustomField>
    <fullName>First_Quarter_Target__c</fullName>
    <formula>April_Target__c  +  May_Target__c  +  June_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Quarter Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>