force-app/main/default/objects/Tehsil__c/fields/Forth_Quarter_Area_Potential__c.field-meta.xml
<CustomField>
    <fullName>Forth_Quarter_Area_Potential__c</fullName>
    <formula>January_Area_Potential__c + February_Area_Potential__c + March_Area_Potential__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forth Quarter Area Potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>