force-app/main/default/objects/Tehsil__c/fields/Forth_Quarter_Target__c.field-meta.xml
<CustomField>
    <fullName>Forth_Quarter_Target__c</fullName>
    <formula>January_Target__c +  February_Target__c +  March_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forth Quarter Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>