force-app/main/default/objects/Tehsil__c/fields/January_Area_Potential__c.field-meta.xml
<CustomField>
    <fullName>January_Area_Potential__c</fullName>
    <defaultValue>0</defaultValue>
    <label>January Area Potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>