force-app/main/default/objects/Tehsil__c/fields/June_Target__c.field-meta.xml
<CustomField>
    <fullName>June_Target__c</fullName>
    <defaultValue>0</defaultValue>
    <label>June Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>