force-app/main/default/objects/Tehsil__c/fields/Previous_Month_Target__c.field-meta.xml
<CustomField>
    <fullName>Previous_Month_Target__c</fullName>
    <formula>IF( Month_Number__c = 2, January_Target__c ,
IF(Month_Number__c = 3, February_Target__c ,
IF(Month_Number__c = 4, March_Target__c,
IF(Month_Number__c = 5, April_Target__c,
IF(Month_Number__c = 6, May_Target__c,
IF(Month_Number__c = 7, June_Target__c,
IF(Month_Number__c = 8, July_Target__c,
IF(Month_Number__c = 9, August_Target__c,
IF(Month_Number__c = 10, September_Target__c,
IF(Month_Number__c = 11, October_Target__c,
IF(Month_Number__c = 12, November_Target__c,
IF(Month_Number__c = 1, December_Target__c, 0) ) ) ) ) ) ) ) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Month Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>