force-app/main/default/objects/Tehsil__c/fields/Second_Quarter_Area_Potential__c.field-meta.xml
<CustomField>
    <fullName>Second_Quarter_Area_Potential__c</fullName>
    <formula>July_Area_Potential__c + August_Area_Potential__c + September_Area_Potential__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Second Quarter Area Potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>