force-app/main/default/objects/Tehsil__c/fields/Second_Quarter_Target__c.field-meta.xml
<CustomField>
    <fullName>Second_Quarter_Target__c</fullName>
    <formula>July_Target__c +  August_Target__c +  September_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Second Quarter Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>