force-app/main/default/objects/Tehsil__c/fields/Third_Quarter_Area_Potential__c.field-meta.xml
<CustomField>
    <fullName>Third_Quarter_Area_Potential__c</fullName>
    <formula>October_Area_Potential__c + November_Area_Potential__c + December_Area_Potential__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Third Quarter Area Potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>