force-app/main/default/objects/Tehsil__c/fields/Third_Quarter_Target__c.field-meta.xml
<CustomField>
    <fullName>Third_Quarter_Target__c</fullName>
    <formula>October_Target__c +  November_Target__c +  December_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Third Quarter Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>